--- a/index.html
+++ b/index.html
@@ -3,134 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key-Based Chatroom</title>
+    <title>Serverless Chat Room</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .chat-container {
-            background: #fff;
-            border: 1px solid #ccc;
-            padding: 20px;
-            width: 300px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        #chat-window {
-            border: 1px solid #ccc;
-            height: 200px;
-            overflow-y: scroll;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-        #session-key, #message, #user-select {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-        }
-        #start-session, #send {
-            width: 100%;
-            padding: 10px;
-            background: #007bff;
-            border: none;
-            color: white;
-            cursor: pointer;
-        }
-        #start-session:hover, #send:hover {
-            background: #0056b3;
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        #message-input { width: 300px; height: 100px; }
+        #messages { margin-top: 20px; }
+        .message { margin-bottom: 10px; }
+        .message strong { margin-right: 10px; }
+        .message em { font-size: 0.9em; color: gray; }
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <div id="chat-window">
-            <div id="output"></div>
-        </div>
-        <input type="text" id="session-key" placeholder="Generated session key" readonly>
-        <button id="start-session">Start Session</button>
+    <h1>Serverless Chat Room</h1>
+    <div>
+        <label for="user-select">Choose your user:</label>
         <select id="user-select">
-            <option value="User 1">User 1</option>
-            <option value="User 2">User 2</option>
+            <option value="user1">User 1</option>
+            <option value="user2">User 2</option>
         </select>
-        <input type="text" id="message" placeholder="Enter message">
-        <button id="send">Send</button>
+    </div>
+    <div>
+        <textarea id="message-input" placeholder="Enter your message"></textarea>
+        <button onclick="sendMessage()">Send</button>
+    </div>
+    <div id="chat-log">
+        <h2>Chat Log</h2>
+        <div id="messages"></div>
     </div>
     <script>
-        let sessionKey = '';
+        function encodeBase64(message) {
+            return btoa(unescape(encodeURIComponent(message)));
+        }
 
-        document.addEventListener('DOMContentLoaded', () => {
-            const output = document.getElementById('output');
-            const startSessionButton = document.getElementById('start-session');
-            const sendButton = document.getElementById('send');
-            const sessionKeyInput = document.getElementById('session-key');
-            const messageInput = document.getElementById('message');
+        function decodeBase64(encodedMessage) {
+            return decodeURIComponent(escape(atob(encodedMessage)));
+        }
+
+        function sendMessage() {
             const userSelect = document.getElementById('user-select');
+            const messageInput = document.getElementById('message-input');
+            const user = userSelect.value;
+            const message = messageInput.value.trim();
 
-            function generateKey() {
-                const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-                let key = '';
-                for (let i = 0; i < 10; i++) {
-                    key += chars.charAt(Math.floor(Math.random() * chars.length));
-                }
-                return key;
+            if (message) {
+                const encodedMessage = encodeBase64(message);
+                const timestamp = new Date().toISOString();
+                
+                const chatKey = 'chatMessages';
+                const chatMessages = JSON.parse(localStorage.getItem(chatKey)) || [];
+                chatMessages.push({ user, message: encodedMessage, timestamp });
+                
+                localStorage.setItem(chatKey, JSON.stringify(chatMessages));
+                messageInput.value = '';
+                displayMessages();
             }
+        }
 
-            function encodeMessages(messages) {
-                const json = JSON.stringify(messages);
-                return btoa(json);
-            }
+        function displayMessages() {
+            const chatKey = 'chatMessages';
+            const chatMessages = JSON.parse(localStorage.getItem(chatKey)) || [];
+            const messagesDiv = document.getElementById('messages');
+            messagesDiv.innerHTML = '';
 
-            function decodeMessages(encodedMessages) {
-                const json = atob(encodedMessages);
-                return JSON.parse(json);
-            }
-
-            function loadMessages() {
-                const encodedMessages = localStorage.getItem(sessionKey);
-                const messages = encodedMessages ? decodeMessages(encodedMessages) : [];
-                output.innerHTML = '';
-                messages.forEach(msg => {
-                    output.innerHTML += `<p><strong>${msg.user}:</strong> ${msg.message}</p>`;
-                });
-                output.scrollTop = output.scrollHeight;
-            }
-
-            function saveMessage(user, message) {
-                const encodedMessages = localStorage.getItem(sessionKey);
-                const messages = encodedMessages ? decodeMessages(encodedMessages) : [];
-                messages.push({ user, message });
-                localStorage.setItem(sessionKey, encodeMessages(messages));
-                loadMessages();
-            }
-
-            function initSession() {
-                sessionKey = generateKey();
-                sessionKeyInput.value = sessionKey;
-                loadMessages();
-            }
-
-            startSessionButton.addEventListener('click', () => {
-                initSession();
+            chatMessages.forEach(({ user, message, timestamp }) => {
+                const decodedMessage = decodeBase64(message);
+                const messageElement = document.createElement('div');
+                messageElement.className = 'message';
+                messageElement.innerHTML = `<strong>${user}:</strong> ${decodedMessage} <em>${timestamp}</em>`;
+                messagesDiv.appendChild(messageElement);
             });
+        }
 
-            sendButton.addEventListener('click', () => {
-                const message = messageInput.value.trim();
-                const user = userSelect.value;
-                if (sessionKey && message) {
-                    saveMessage(user, message);
-                    messageInput.value = '';
-                }
-            });
-
-            // Automatically generate a session key on page load
-            initSession();
-        });
+        window.onload = displayMessages;
     </script>
 </body>
 </html>
